Implemented the community consumer migration: - Replaced Camel rendition/transform routes with Spring JMS listener containers. - Added transport-neutral text listener/handler abstractions. - Preserved policy binding, concurrency, transactions, and endpoint compatibility. - Updated tests and fixtures.